WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246523
Fix even more misc compiler warnings, mid October 2022 edition
https://bugs.webkit.org/show_bug.cgi?id=246523
Summary
Fix even more misc compiler warnings, mid October 2022 edition
Michael Catanzaro
Reported
2022-10-14 08:30:33 PDT
[1878/2405] Building CXX object Source/WebKit/CMakeFiles/...ces/WebKit/unified-sources/UnifiedSource-123a7f2f-1.cpp.o In file included from /home/mcatanzaro/Projects/WebKit/WebKitBuild/gtk3/WTF/Headers/wtf/FastMalloc.h:26, from /home/mcatanzaro/Projects/WebKit/Source/WebKit/config.h:42, from /home/mcatanzaro/Projects/WebKit/Source/WebKit/Platform/LogInitialization.cpp:26, from /home/mcatanzaro/Projects/WebKit/WebKitBuild/gtk3/DerivedSources/WebKit/unified-sources/UnifiedSource-123a7f2f-1.cpp:1: /home/mcatanzaro/Projects/WebKit/Source/WebKit/Platform/IPC/ArgumentCoders.cpp: In static member function ‘static std::optional<std::array<unsigned char, 20> > IPC::ArgumentCoder<std::array<unsigned char, 20> >::decode(IPC::Decoder&)’: /home/mcatanzaro/Projects/WebKit/WebKitBuild/gtk3/WTF/Headers/wtf/StdLibExtras.h:610:58: warning: redundant move in return statement [-Wredundant-move] 610 | #define WTFMove(value) std::move<WTF::CheckMoveParameter>(value) | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~ /home/mcatanzaro/Projects/WebKit/Source/WebKit/Platform/IPC/ArgumentCoders.cpp:179:12: note: in expansion of macro ‘WTFMove’ 179 | return WTFMove(digest); | ^~~~~~~ /home/mcatanzaro/Projects/WebKit/WebKitBuild/gtk3/WTF/Headers/wtf/StdLibExtras.h:610:58: note: remove ‘std::move’ call 610 | #define WTFMove(value) std::move<WTF::CheckMoveParameter>(value) | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~ /home/mcatanzaro/Projects/WebKit/Source/WebKit/Platform/IPC/ArgumentCoders.cpp:179:12: note: in expansion of macro ‘WTFMove’ 179 | return WTFMove(digest); | ^~~~~~~ [1978/2405] Building CXX object Source/WebKit/CMakeFiles/...ces/WebKit/unified-sources/UnifiedSource-88d1702b-2.cpp.o In file included from /home/mcatanzaro/Projects/WebKit/WebKitBuild/gtk3/DerivedSources/WebKit/unified-sources/UnifiedSource-88d1702b-2.cpp:7: /home/mcatanzaro/Projects/WebKit/Source/WebKit/UIProcess/ProcessThrottler.cpp: In member function ‘std::optional<WebKit::ProcessAssertionType> WebKit::ProcessThrottler::assertionTypeForState(WebKit::ProcessThrottleState)’: /home/mcatanzaro/Projects/WebKit/Source/WebKit/UIProcess/ProcessThrottler.cpp:156:1: warning: control reaches end of non-void function [-Wreturn-type] 156 | }
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2022-10-14 08:37:23 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5379
EWS
Comment 2
2022-10-17 06:06:26 PDT
Committed
255621@main
(e8130b7e6a44): <
https://commits.webkit.org/255621@main
> Reviewed commits have been landed. Closing PR #5379 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug