Fix even more misc compiler warnings, mid October 2022 edition https://bugs.webkit.org/show_bug.cgi?id=246523

Reviewed by Adrian Perez de Castro.

* Source/WebKit/Platform/IPC/ArgumentCoders.cpp:
(IPC::ArgumentCoder<SHA1::Digest>::decode):
* Source/WebKit/UIProcess/ProcessThrottler.cpp:
(WebKit::ProcessThrottler::assertionTypeForState):

Canonical link: https://commits.webkit.org/255621@main